# hawkes

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  newbuild
GoodVector/: CMakeLists.txt  goodvector.hpp  main.cpp
include/: HawkesSimulator.hpp  Logger.hpp  Parameters.hpp  Simulator.hpp  cvector.hpp  debug.hpp  io.hpp  myrandom.hpp  progress_bar.hpp  simulate.hpp  tictoc.hpp  utilities.hpp
scripts/: batch.py  functions_Hawkes.R  hawkes.nb  old_fun.R  old_test.R  plots_Hawkes.R  simulate.cpp  test_Hawkes.R  test_pareto.R
src/: HawkesSimulator_compute.cpp  HawkesSimulator_constructor.cpp  HawkesSimulator_io.cpp  HawkesSimulator_rng.cpp  HawkesSimulator_run.cpp  HawkesSimulator_simulate.cpp  HawkesSimulator_tests.cpp  Parameters.cpp  Simulator_constructor.cpp  Simulator_io.cpp  Simulator_rng.cpp  Simulator_simulate.cpp  Simulator_tests.cpp  Simulator_utilities.cpp  io.cpp  main.cpp  myrandom.cpp  progress_bar.cpp  simulate.cpp  tictoc.cpp  utilities.cpp
